<resources>
    <string name="retirement_options">Retirement Options</string>
    <string name="start_age">Start Age:</string>
    <string name="desired_start_age">Desired Start Age:</string>
    <string name="actual_start_age">Actual Start Age:</string>
    <string name="end_age">End Age</string>
    <string name="withdraw_amount">Initial Withdraw Amount</string>
    <string name="withdraw_percentage">Initial Withdraw Percentage</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>

    <string name="monthly_amount">Monthly Amount:</string>
    <string name="start_balance">Start Balance:</string>
    <string name="final_balance">Final Balance:</string>
    <string name="length_of_retirement">Length of retirement:</string>
    <string name="funds_will_last">Funds will last:</string>
    <string name="personal_info">Personal Info</string>
    <string name="birthday_year_format">Birthdate (dd-MM-yyyy)</string>

    <string name="retirement_helper">Retirement Helper</string>
    <string name="register_new_user">Register New User</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>

    <string name="name">Name: </string>
    <string name="minimum_age">Minimum Age:</string>

    <string name="full_monthly_benefit">Full Monthly Benefit:</string>
    <string name="monthly_benefit">Monthly Benefit:</string>
    <string name="save_income_source">Save Income Source</string>
    <string name="name_of_institution">Name of Institution:</string>
    <string name="balance">Balance:</string>
    <string name="annual_interest">Annual Interest:</string>
    <string name="monthly_increase">Monthly Increase:</string>
    <string name="minimum_withdraw_age">Minimum Withdraw Age:</string>
    <string name="min_401k_age">59y 6m</string>
    <string name="penalty_401k">10%</string>
    <string name="early_withdraw_penalty">Early Withdraw Penalty:</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="monthly_benefit_noc">Monthly Benefit</string>
    <string name="retirement_age">Retirement Age</string>
    <string name="age">Age</string>
    <string name="current_balance">Current Balance:</string>
    <string name="full_retirement_age">Full Retirement Age:</string>
    <string name="penalty_amount">Penalty Amount:</string>

    <string name="savings_account">Savings Account</string>
    <string name="tax_deferred_account">Tax Deferred Account</string>
    <string name="savings_401k_account">401(k)</string>
    <string name="pension">Pension</string>
    <string name="social_security">Social Security</string>
    <string-array name="income_types">
        <item>@string/savings_account</item>
        <item>@string/savings_401k_account</item>
        <item>@string/pension</item>
        <item>@string/social_security</item>
    </string-array>

    <string name="usa">USA</string>
    <string name="other_country">Other</string>
    <string-array name="country_array">
        <item>@string/usa</item>
        <item>@string/other_country</item>
    </string-array>

    <string name="principle_spouse">Principle Spouse</string>
    <string name="ec_no_error">No error</string>
    <string name="ec_no_spouse_birthdate">Need to add birthdate for spouse before adding social security income source</string>
    <string name="ec_only_two_social_security_allowed">Can only have two Social Security income sources</string>
    <string name="ec_only_one_social_security_allowed">Can only have Social Security income source with free version.</string>
    <string name="ec_principle_spouse">Principle Spouse</string>
    <string-array name="error_codes">
        <item>@string/ec_no_error</item>
        <item>@string/ec_only_two_social_security_allowed</item>
        <item>@string/ec_only_one_social_security_allowed</item>
        <item>@string/ec_no_spouse_birthdate</item>
        <item>@string/ec_principle_spouse</item>
    </string-array>

    <string name="when_reach_amount">When Reach Amount</string>
    <string name="when_reach_percentage">When Reach Percentage</string>
    <string-array name="app_modes">
        <item>@string/withdraw_percentage</item>
        <item>@string/withdraw_amount</item>
        <item>@string/when_reach_amount</item>
        <item>@string/when_reach_percentage</item>
    </string-array>

    <string name="age_not_valid">Age is not valid</string>
    <string name="balance_not_valid">Balance value is not valid</string>
    <string name="interest_not_valid">Interest value is not valid</string>
    <string name="value_not_valid">Monthly increase value is not valid</string>
    <string name="reach_percent_value_is_not_valid">Reach percent value is not valid</string>
    <string name="reach_amount_value_is_not_valid">Reach amount value is not valid</string>
    <string name="monthly_increase_not_valid">Monthly increase value is not valid</string>
    <string name="annual_withdraw_increase_not_valid">Annual withdraw increase value is not valid</string>

    <string name="empty_list">LIST IS EMPTY</string>
    <string name="add_income_source">Add Income Source</string>

    <string name="only_two_gov_pension">Only two Social Security income sources are allowed\nOne for you and one for your spouse.</string>

    <string name="income_source_subtitle">Income Source Summary</string>
    <string name="summary_screen_subtitle">Monthly Benefit Summary</string>
    <string name="milestone_age_subtitle">Retirement Milestone Ages</string>
    <string name="delete_income_source">Delete income source?</string>

    <string name="income_source_view_action">View Details</string>
    <string name="income_source_edit_action">Edit</string>
    <string name="income_source_delete_action">Delete</string>

    <string-array name="income_source_actions">
        <item>@string/income_source_edit_action</item>
        <item>@string/income_source_delete_action</item>
    </string-array>

    <string name="add_age">Add a retirement age.</string>
    <string name="delete_age">Delete retirement age?</string>
    <string name="invalid_age">Invalid age. Age cannot be less than your current age:</string>
    <string name="duplicate_age">Duplicate age. Age already exists:</string>
    <string name="dismiss">Dismiss</string>
    <string name="birthdate_not_valid">Birthdate is not valid</string>
    <string name="spouse_birthdate_not_valid">Spouse birthdate is not valid</string>
    <string-array name="age_actions">
        <item>@string/income_source_delete_action</item>
    </string-array>

    <string name="dollar_amount">Dollar Amount:</string>
    <string name="percent_amount">Percent:</string>
    <string name="sign_in">Sign In</string>

    <string name="enter_birthdate">Please enter your birth date (%s).</string>
    <string name="add_income_source_message">Please add some income sources on the income source screen</string>
    <string name="enter_valid_birthdate">Please enter a valid birth date (%s).</string>
    <string name="monthly_benefit_not_valid">Spouse monthly benefit value is not valid</string>
    <string name="savings_subtitle">Savings</string>
    <string name="penalty_min_age_message">penalty applies before minimum age is reached.</string>
    <string name="insufficient_funds_message">You do not have sufficient funds for the monthly amount desired.</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="nav_home">Home</string>
    <string name="nav_income">Income</string>
    <string name="nav_milestones">Milestones</string>
    <string name="no_results">No Results</string>
    <string name="retirement_nmilestones">Retirement Milestones</string>
    <string name="text_view">TextView</string>
    <string name="sign_out">Sign Out</string>
    <string name="revoke">Revoke</string>
    <string name="edit">Edit</string>
    <string name="edit_spouse_birthdate">Spouse Birthdate</string>
    <string name="edit_birthdate">Birthdate</string>
    <string name="add_balance">Add Balance</string>
    <string name="alert">Alert</string>
    <string name="withdraw_requires_value">Withdraw amount requires a value.</string>
    <string name="invalid_widthdraw_amount">Invalid withdraw amount.</string>
    <string name="age_invalid">Age is invalid</string>
    <string name="age_greater_than_your_age">End age must be greater than your current age:</string>
    <string name="milestones">Milestones</string>
    <string name="overflow_menu">Overflow Menu</string>
    <string name="add_income_type">Add income source</string>
    <string name="add_milestone_age">Add retirement milestone age</string>
    <string name="include_spouse">Include spouse</string>
    <string name="penalty_age">Penalty Age:</string>
    <string name="amount">Amount</string>
    <string name="percentage">Percentage</string>
    <string name="annual_percent_increase">Annual % Withdraw Increase</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="edit_birthdate_desc">edit birthdate</string>
    <string name="edit_age_desc">Edit age</string>
    <string name="edit_start_age_desc">Start Age</string>
    <string name="edit_min_age">Edit minimum age</string>
    <string name="edit_age">Start Retirement Age</string>
    <string name="spouse_full_retirement_age">Spouse Full Retirement Age:</string>
    <string name="reach_amount">When will savings reach this amount?</string>
    <string name="reach_percent_income">When will savings reach this percent of  income?</string>
    <string name="annual_income">Annual Income</string>
    <string name="monthly_pretire_income">Monthly Pre-Retirement Income</string>
    <string name="spousal_benefits">Spousal Benefits?</string>
    <string name="monthly_addition">Monthly Addition</string>
    <string name="init_percentage_withdraw">Initial % Withdraw</string>
    <string name="save">Save</string>
    <string name="stop_addition_age">Stop Addition Age</string>
    <string name="show_months">Show Months</string>
    <string name="country">Country</string>
    <string name="country_desc">Choose Country</string>
</resources>
