<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_menu"
        android:enabled="true"
        android:title="@string/nav_home"
        android:icon="@mipmap/ic_home_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/income_menu"
        android:enabled="true"
        android:title="@string/nav_income"
        android:icon="@mipmap/ic_monetization_on_black_24dp"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/milestones_menu"
        android:enabled="true"
        android:title="@string/nav_milestones"
        android:icon="@mipmap/ic_schedule_black_24dp"
        app:showAsAction="ifRoom" />

</menu>
